# ritemark-native

./: .gitattributes  .gitignore  .gitmodules  .npmrc  .signing-config.example  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  WISHLIST.md  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: knowledge-builder.md  pr-reviewer.md  (+7 more)
.flows/: test-blog-post.flow.json
.github/: PULL_REQUEST_TEMPLATE.md
branding/: BRANDING.json  LICENSE  PRODUCTORY_BRAND_GUIDELINES .md  README.md  entitlements.plist  product.json
docs/: BUILD-WINDOWS-INSTALLER.md  CHANGELOG.md  SECURITY-AUDIT.md  STYLE-GUIDE.md  WISHLIST.md  building-installers.md  installation-guide.md  menu-customization.md
rag-server/: pyproject.toml
rag-server/src/rag_server/: __init__.py  parser.py
rag-server/src/ritemark_rag/: __init__.py  parser.py  server.py
scripts/: apply-patches.sh  azure-runner-setup.sh  build-mac.sh  build-prod-windows.sh  build-prod.sh  build-prod.sh.backup  build-prod.sh.pre-json-fix  build-whisper.sh  build-windows-local.ps1  build-windows.sh  check-branding.sh  codesign-app.sh  copy-welcome-assets.sh  create-dmg.sh  create-extension-release.sh  create-patch.sh  create-windows-installer.sh  generate-update-feed.mjs  notarize-app.sh  notarize-dmg.sh  release-dmg.sh  release-preflight.sh  setup.sh  sync-branding.sh  test-ci-asset-parity.sh  update-vscode.sh  validate-build-env.sh  validate-build-output.sh  validate-patches.sh  validate-qa.sh  verify-notarization.sh
sprint-26/: test-v1.1.1.md
(+888 files in other folders)
