[project]
name = "ritemark-rag"
version = "0.1.0"
description = "RiteMark RAG server - document parsing and MCP tools"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.0",
    "fastmcp>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ritemark_rag"]
