[project]
name = "rag-server"
version = "0.1.0"
description = "Docling-based document parser for RiteMark RAG"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "docling>=2.0",
]

[project.scripts]
rag-parse = "rag_server.parser:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_server"]
